--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles.css">
   
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
@@ -15,38 +16,26 @@
   </style>
 </head>
 <body>
-
-  <!-- Sign-up form start -->
-
-  Stay updated!
-
-  Join 60,000+ product managers receiving monthly updates on:
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <article class="newsletter__article">
+      <img class="newsletter__image" src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+      <div class="newsletter__copy-wrapper">
+        <h2 class="newsletter__headline">Stay updated!</h2>
+        <p>Join 60,000+ product managers receiving monthly updates on:</p>
+        <ul class="newsletter__list">
+          <li class="newsletter__list-item">Product discovery and building what matters</li>
+          <li class="newsletter__list-item">Measuring to ensure updates are a success</li>
+          <li class="newsletter__list-item">And much more!</li>
+        </ul>
+        <form class="newsletter__form">
+          <div class="newsletter__form-group">
+            <label for="email">Email address</label>
+            <input type="email" id="email" placeholder="email@company.com" />
+          </div>
+          <input type="submit" value="Subscribe to monthly newsletter" />
+        </form>
+      </div>
+    </article>
+  </main>
 </body>
 </html>
