Add desktop styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <main>
     <article class="newsletter__article">
-      <img class="newsletter__image" src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+      <img class="newsletter__image newsletter__image--mobile" src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+      <img class="newsletter__image newsletter__image--desktop" src="./assets/images/illustration-sign-up-desktop.svg" alt="" />
       <div class="newsletter__copy-wrapper">
         <h2 class="newsletter__headline">Stay updated!</h2>
         <p>Join 60,000+ product managers receiving monthly updates on:</p>
